--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <style href="style.html"></style>
 </head>
 <body>
-  <p>This is a new repo</p>
+  <p>This is a new repo (dropdown)</p>
 </body>
 </html>
